2002-06-15  Roland McGrath  <roland@frob.com>

	* sysdeps/alpha/divrem.h: Use local label instead of global one for
	jump to local subroutine.

2002-06-14  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/i386/Makeconfig: File moved to ...
	* sysdeps/mach/hurd/Makeconfig: ... here.

2002-06-13  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/fpu/s_finite.c: Remove INTDEF.
	* sysdeps/m68k/fpu/s_finitef.c: Likewise.
	* sysdeps/m68k/fpu/s_finitel.c: Likewise.

2002-06-13  Roland McGrath  <roland@frob.com>

	* hurd/hurdstartup.h (_hurd_startup): int -> intptr_t in MAIN arg type.
	* hurd/hurdstartup.c (_hurd_startup): Likewise.
	Use intptr_t instead of int for argc in stack layout.
	* sysdeps/mach/hurd/alpha/init-first.c (init): Fix argument type.
	(_dl_init_first): Likewise.
	(_hurd_stack_setup): Likewise.
	(init1): Add a cast.
	* sysdeps/mach/hurd/dl-sysdep.c (_dl_sysdep_start: go): Fix arg type.

	* sysdeps/mach/hurd/if_index.c (if_nameindex): Use size_t for AMOUNT
	argument to pfinet_siocgifconf RPC.

2002-06-13  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/fpu/s_isinf.c (INTDEFX): Define to get correct
	expansion order.

2002-06-12  Roland McGrath  <roland@frob.com>

	* sysdeps/generic/tmpfile.c [USE_IN_LIBIO] (tmpfile): Don't #define
	if already defined.
	[USE_IN_LIBIO]: Conditionalize versioned_symbol use on
	[GEN_THIS == __GT_FILE] so that tmpfile64.c's inclusion doesn't get it.

2002-06-11  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/xstat64.c: Conditionalize entire contents of the
	file on [!RTLD_STAT64].
	* sysdeps/mach/hurd/fxstat64.c: Likewise.

	* sysdeps/mach/hurd/tmpfile.c (tmpfile64): Define as alias of tmpfile.
	(__fdopen): Use INTUSE.
	* sysdeps/mach/hurd/tmpfile64.c: New file, empty placeholder.

	* stdio-common/tmpfile64.c: File removed.
	* sysdeps/generic/tmpfile64.c: New file.
	* sysdeps/generic/tmpfile.c (GEN_THIS): New macro, define to __GT_FILE
	if not already defined.
	(tmpfile): Use it in place of __GT_FILE.
